# torchlab

./: .gitignore  README.md  pyproject.toml  setup.py
src/custom_ops/matmul/: dispatch.cpp  kernels.cu  op.hpp
src/custom_ops/sigmoid/: dispatch.cpp  kernels.cu  op.hpp  pybind.cpp
tests/ops/: test_cmatmul.py  test_custom_sigmoid.py
torchlab/: __init__.py
torchlab/data/: fashion_mnist_datamodule.py
torchlab/data_modules/: fashion_mnist.py
torchlab/lightning_modules/: vae_lm.py
torchlab/models/: vanilla_vae.py
torchlab/ops/sigmoid/: fn.py
