[build-system]
requires = ["setuptools>=42", "wheel", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlab"
version = "0.1.0"
description = "A CUDA playground for custom PyTorch ops, layers, and modules"
authors = [{ name="Ahsan Iqbal" }]
dependencies = ["torch>=2.0", "pytest"]
